# NewsCrawler

./: requirements.txt  result.md  tech_news.txt  test.py
NewsCrawler/: .gitignore  LICENSE  README.md  argon_log.py  config.yaml  items.py  main.py  pyproject.toml  requirements.txt
NewsCrawler/base/: __init__.py  base_request.py  base_spider.py
NewsCrawler/config/: __init__.py  base_config.py
NewsCrawler/db/: __init__.py  init_db.py  session.py
NewsCrawler/libs/: bilibili_signature.js  toutiao_signature.js
NewsCrawler/model/: __init__.py  news.py
NewsCrawler/news/: __init__.py
NewsCrawler/news/baidu/: __init__.py  baidu_crawl.py  data_parser.py  request_handler.py
NewsCrawler/news/cctv/: __init__.py  cctv_crawl.py  data_parser.py  request_handler.py
NewsCrawler/news/fenghuang/: __init__.py  data_parser.py  fenghuang_crawl.py  request_handler.py
NewsCrawler/news/netease/: __init__.py  data_parser.py  netease_crawl.py  request_handler.py
NewsCrawler/news/sina/: __init__.py  data_parser.py  request_handler.py  sina_crawl.py
NewsCrawler/news/sztv/: __init__.py  data_parser.py  request_handler.py  sztv_crawl.py
NewsCrawler/news/tencent/: __init__.py  data_parser.py  request_handler.py  tencent_crawl.py
NewsCrawler/news/thepaper/: __init__.py  data_parser.py  request_handler.py  thepaper_crawl.py
NewsCrawler/parse/: __init__.py  news_parse.py
NewsCrawler/save/: __init__.py  database_handler.py  storage.py
NewsCrawler/service/: __init__.py  dingding.py  feishu.py
NewsCrawler/utils/: __init__.py  spider_tools.py
News_LLM/: test.py
(+12 files in other folders)
