[tool.poetry]
name = "newscrawler"
version = "0.1.0"
description = ""
authors = ["limao <1078769434@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
loguru = "^0.7.3"
ruff = "^0.9.2"
pre-commit = "^4.1.0"
gne = "^0.3.1"
pydantic = "^2.10.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
aiomysql = "^0.2.0"
pydantic-settings = "^2.7.1"
bs4 = "^0.0.2"
apscheduler = "^3.11.0"
tenacity = "^9.0.0"
cryptography = "^44.0.2"
pyexecjs = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
